Background Scene Dupliface Not Instanced #86671

Closed
opened 2021-03-17 19:28:53 +01:00 by shannon zachow · 7 comments

System Information
Operating system: linux
Graphics card: RTX 2060

Blender Version
Broken: 2.92.0 (and back at least as far as 2.83.9)

Short description of error
DupliFace instances in Background Scene are not instanced in Foreground Scene.

Exact steps for others to reproduce the error
see attached .blend file. Compare instancing between Scenes "bgScene" and "fgScene".

test024_bgScene_instance.blend

system-info.txt

**System Information** Operating system: linux Graphics card: RTX 2060 **Blender Version** Broken: 2.92.0 (and back at least as far as 2.83.9) **Short description of error** DupliFace instances in Background Scene are not instanced in Foreground Scene. **Exact steps for others to reproduce the error** see attached .blend file. Compare instancing between Scenes "bgScene" and "fgScene". [test024_bgScene_instance.blend](https://archive.blender.org/developer/F9896772/test024_bgScene_instance.blend) [system-info.txt](https://archive.blender.org/developer/F9896773/system-info.txt)
Author

Added subscriber: @shannonz-1

Added subscriber: @shannonz-1
Author

I recreated in blender 2.79 a file similar to the one I posted above.
The same behaviour is observed: DupliFaces in a Background Scene are not instanced into the foreground scene trying to use them.

Perhaps this never worked? Or am I missing a step(s) ?

test025_bgScene_instance.279.blend

I recreated in blender 2.79 a file similar to the one I posted above. The same behaviour is observed: DupliFaces in a Background Scene are not instanced into the foreground scene trying to use them. Perhaps this never worked? Or am I missing a step(s) ? [test025_bgScene_instance.279.blend](https://archive.blender.org/developer/F9897633/test025_bgScene_instance.279.blend)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, looks like a bug to me.

Not exactly sure about module responsibility, will tag the Core team.

Can confirm, looks like a bug to me. Not exactly sure about module responsibility, will tag the `Core` team.

This issue was referenced by 40360253ae

This issue was referenced by 40360253aefd1f3451d5b413595bcbb143425b84

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-10-11 18:19:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86671
No description provided.