Fix T86671: Background Scene Dupliface Not Instanced.

Use depsgraph's objects iterator to find sources of dupliobjects,
instead of looping over bases of a viewlayer.